# master

./: .app.py.swp  .dockerignore  .gitignore  .gitmodules  .hadolint.yaml  .pylintrc  .shellcheckrc  .yamllint  404.html  CNAME  Dockerfile  Dockerfile.base  Dockerfile.cdk  Dockerfile.docs  Dockerfile.test  LICENSE  README.md  __init__.py  app.js  app.py  cache.py  cdk.json  cdk.py  config.yml  docker-compose-fullstack.yml  docker-compose.yaml  docker-compose.yml  index.html  lambda.py  mkdocs.yaml  model.py  package-lock.json  package.json  pyproject.toml  qs.py  quakeservices.py  renovate.json  requirements.dev.in  requirements.dev.txt  requirements.in  (+7 more)
.github/: dependabot.yml  deploy_docs.yaml  renovate.json
.github/workflows/: build.yaml  build_container.yaml  build_containers.yml  cleanup_old_workflow_runs.yaml  codeql-analysis.yml  deploy_docs.yaml  deploy_master.yaml  dev_containers.yaml  docs.yaml  lint.yaml  lint_dockerfiles.yaml  lint_docs.yaml  lint_python.yaml  lint_yaml.yaml  linting.yaml  linting_docker.yaml  linting_docs.yaml  linting_python.yaml  linting_yaml.yaml  master.yaml  pipeline.yml  release.yml  test_cdk.yaml  test_master.yaml  testing.yaml  testing_cdk.yaml  testing_master.yaml
configuration/master/: index.html
configuration/protocol_models/: index.html
deploy/: deploy_stack.py
deploy/deploy.egg-info/: PKG-INFO  SOURCES.txt
deploy/web_backend_deploy.egg-info/: SOURCES.txt  requires.txt
deployment/: app.py  constants.py  environments.py  package-lock.json  package.json  requirements.in  requirements.txt
deployment/aws/: index.html
deployment/local/: index.html
deployment/master/: app.py
deployment/models/: app.py  base.py
deployment/models/dns/: record.py
deployment/parts/: base_stack.py  record.py  task.py  zone.py
deployment/stacks/: __init__.py  infra.py  master.py  pipeline.py  web_backend.py  web_frontend.py
deployment/types/: __init__.py
development/contributing/: index.html
development/environment/: index.html
docker/: Dockerfile  Dockerfile.base  Dockerfile.cdk  Dockerfile.dev  Dockerfile.docs  Dockerfile.master  Dockerfile.test
docs/: index.md  package-lock.json  package.json  requirements.txt
docs/configuration/: protocol_models.md
docs/deployment/: aws.md  local.md
docs/development/: contributing.md  environment.md
docs/references/: external.md
docs/schemas/: game_protocol.json  game_protocol.md  protocol_response.json  protocol_response.md
docs/usage/: clients.md  servers.md
examples/: sample.yml
gameserver/: __init__.py
headers/: __init__.py
headers/config/: quake.yml  quake1.yml  quake2.yml
lib/master/: Dockerfile
lib/masterserver/: Dockerfile  app.py  constants.py  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt
lib/storage/: __init__.py  dynamodb.py  dynamodb_storage.py  pynamo_model.py  pynamodb_storage.py  requirements.in  requirements.txt
lib/web-backend/: Dockerfile  app.py  index.py  lambda.py  requirements.in  requirements.txt  requirements_flask.txt
lib/web-frontend/: config.yml  package-lock.json  package.json  vue.config.js
loadbalancer/: __init__.py
loadbalancer/config/: endpoints.yml
master/: constants.py  requirements.in  requirements.txt
master/client/: main.py
master/commandline/: client.py  database.py  main.py  schema.py  server.py
master/helpers/: __init__.py
master/protocols/: __init__.py  decoder.py  encoder.py
master/server/: __init__.py  main.py
master/storage/: __init__.py  base.py
master_deploy/: master_deploy_stack.py  xray_deploy_stack.py
master_deploy/master_deploy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
masterserver/: __init__.py
protocols/: __init__.py
protocols/config/: quake2.yml  quake3.yml  quakeworld.yml
protocols/proxy/: __init__.py
public/: index.html
schemas/: protocol_response.json
schemas/game_protocol/: index.html
schemas/protocol_response/: index.html
scripts/: build  build-base  build-cdk  build-docs  build-master  build-test  build-web-frontned  build_master  build_web_backend  cdk  cdk-deploy  cdk-deploy-master-server  cdk-deploy-web-backend  cdk-synth  cdk-synth-master-server  cdk-synth-web-backend  create_table  deploy  deploy_frontend  env  lint  lint-all  lint-black  lint-docker  lint-docs  lint-infra  lint-isort  lint-mypy  lint-pylint  lint-python  lint-yaml  lint_black  lint_python  lint_yaml  release  release_lambda  release_local  remove  run-docs  run-master  (+12 more)
scripts/cdk/: bootstrap  deploy  ls  synth
scripts/ci/: lint-black  lint-docker  lint-docs  lint-isort  lint-mypy  lint-pylint  lint-shell  lint-yaml  test-cdk  test-integration  test-unit
scripts/docs/: lint-and-fix-docs  run-docs
scripts/include/: build  build-env  cdk  env-app  env-container-any  env-container-build  env-container-run  env-container-test  env-github  lint  registry_login  run-cdk-test-container  run-docs-container  run-test-container
scripts/local/: lint-renovate  prune  update-package-json  update-requirements
search/: search_index.json
src/: package-lock.json  package.json
src/components/: Servers.vue
src/public/: index.html
src/src/: App.vue
storage/: __init__.py  cache.py
test/cdk/: conftest.py  test_frontend_stack.py  test_infra_stack.py  test_master_stack.py
test/unit/: test_gameserver.py  test_protocol.py  test_protocol_utilities.py
tests/cdk/: conftest.py  test_backend_stack.py  test_frontend_stack.py  test_infra_stack.py  test_master_stack.py  test_pipeline_stack.py
tests/unit/: gameserver_test.py  test_gameserver.py  test_protocol.py
tests/unit_tests/: gameserver_test.py  masterserver_test.py  transport_test.py
transport/: __init__.py
usage/clients/: index.html
usage/servers/: index.html
web_backend_deploy/: web_backend_deploy_stack.py
(+99 files in other folders)
