[tool.poetry]
name = "quakeservices"
version = "0.2.1"
description = "idTech master server implemented in Python"
authors = [
    "Gary Brandon <gary.brandon@gmail.com^"
]
readme = "README.md"
license = "BSD"
homepage = "https://github.com/quakeservices/master"
repository = "https://github.com/quakeservices/master"
documentation = "https://docs.quake.services"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.4.2"
pip = "^23.3.1"

[tool.poetry.group.cdk]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.master]
optional = true

[tool.poetry.group.cdk.dependencies]
aws-cdk-lib = "^2.100.0"
aws-cdk-aws-lambda-python-alpha = "^2.100.0a0"
constructs = "^10.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
moto = {extras = ["dynamodb"], version = "^4.2.5"}
mypy = "^1.5.1"
poetry = "^1.6.1"
pylint = "^3.0.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"
yamllint = "^1.32.0"


[tool.poetry.group.docs.dependencies]
json-schema-for-humans = "^0.46.0"
mkdocs-material = "^9.4.4"


[tool.poetry.group.master.dependencies]
boto3 = "^1.28.62"
boto3-stubs = {extras = ["dynamodb"], version = "^1.28.62"}
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
(
    node_modules
  | cdk.out
)
'''

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  ".github",
  "cdk.out",
  ".venv",
  "node_modules"
]
markers = [
  "cdk",
  "decoder",
  "encoder",
  "integration",
  "master",
  "master_handler",
  "master_server",
  "protocols",
  "storage_dynamodb",
  "unit"
]

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore = true

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
strict_optional = false
exclude = [
  "cdk.out",
  ".venv",
]
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pylint]
